.-- -.-- / -.- ..- - .- ... -.-- / -. .. . -- -.-- - .
